methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:33: error: value recule is not a member of Unit
  recule();recule();recule();recule()recule();recule()
                                     ^